Fix images path for Github Pages

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <div class="container-info">
         <div class="content-box">
             <div class="image-wrapper">
-                <img src="/images/monitor.jpg" alt="monitor-trades">
+                <img src="images/monitor.jpg" alt="monitor-trades">
             </div>
             <div class="container-text">
                 <p>Keep an eye on the markets and adapt quickly</p>
@@ -45,7 +45,7 @@
     
         <div class="content-box">
             <div class="image-wrapper">
-                <img src="/images/plan.jpg" alt="plan-trades">
+                <img src="images/plan.jpg" alt="plan-trades">
             </div>
             <div class="container-text">
                 <p>Start each day with a solid trading plan</p>
@@ -54,7 +54,7 @@
 
         <div class="content-box">
             <div class="image-wrapper">
-                <img src="/images/riskmanagement.jpg" alt="risk-management">
+                <img src="images/riskmanagement.jpg" alt="risk-management">
             </div>
             <div class="container-text">
                 <p>Protect your capital with smart risk management</p>
@@ -63,7 +63,7 @@
 
         <div class="content-box">
             <div class="image-wrapper">
-                <img src="/images/reflect.jpg" alt="reflect-trades">
+                <img src="images/reflect.jpg" alt="reflect-trades">
             </div>
             <div class="container-text">
                 <p>Review your trades and learn from mistakes</p>
